resolve some issues

--- a/app/src/main/res/drawable-xxhdpi/material_shadow_z3.xml
+++ b/app/src/main/res/drawable-xxhdpi/material_shadow_z3.xml
@@ -16,5 +16,6 @@
 -->
 <nine-patch xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:src="@drawable/material_shadow_z3_xxhdpi"
     tools:ignore="unused" />
