--- a/app/src/main/res/layouts/dashboard/layout/dashboard_menu_common_layout.xml
+++ b/app/src/main/res/layouts/dashboard/layout/dashboard_menu_common_layout.xml
@@ -67,7 +67,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/dashboard_arrow"
+            app:srcCompat="@drawable/dashboard_arrow"
             android:visibility="gone"
             tools:ignore="ContentDescription"
             tools:visibility="visible" />
