--- a/app/src/main/res/layouts/global_ui_for_connect/layout/services_dialog_modal.xml
+++ b/app/src/main/res/layouts/global_ui_for_connect/layout/services_dialog_modal.xml
@@ -33,7 +33,7 @@
         android:layout_gravity="end|top"
         android:padding="@dimen/dp8"
         android:visibility="visible"
-        android:src="@drawable/close_btn"
+        app:srcCompat="@drawable/close_btn"
         android:background="@drawable/blue_dot"/>
 
 </FrameLayout>
