--- a/app/src/main/res/layouts/patient/patient_appointment/layout/sms_content_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/sms_content_layout.xml
@@ -64,7 +64,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/send_button" />
+            app:srcCompat="@drawable/send_button" />
 
     </RelativeLayout>
 
