--- a/app/src/main/res/layouts/patient/patient_detail_page/layout/activity_web_view.xml
+++ b/app/src/main/res/layouts/patient/patient_detail_page/layout/activity_web_view.xml
@@ -42,7 +42,7 @@
                 android:layout_gravity="center"
                 android:gravity="center|right"
                 android:padding="@dimen/dp10"
-                android:src="@drawable/bookmark_line"
+                app:srcCompat="@drawable/bookmark_line"
                 android:visibility="gone" />
         </LinearLayout>
 
