--- a/app/src/main/res/layouts/patient/patient_detail_page/layout/activity_web_view_forgot_password.xml
+++ b/app/src/main/res/layouts/patient/patient_detail_page/layout/activity_web_view_forgot_password.xml
@@ -19,7 +19,7 @@
             android:paddingStart="@dimen/dp14"
             android:paddingEnd="@dimen/dp10"
             android:paddingTop="@dimen/dp6"
-            android:src="@drawable/back_arrow_a_01"
+            app:srcCompat="@drawable/back_arrow_a_01"
             android:paddingLeft="@dimen/dp14"
             android:paddingRight="@dimen/dp10" />
 
