--- a/app/src/main/res/layouts/waiting_list/layout/waiting_list_row_item.xml
+++ b/app/src/main/res/layouts/waiting_list/layout/waiting_list_row_item.xml
@@ -33,7 +33,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
-                    android:src="@drawable/delete" />
+                    app:srcCompat="@drawable/delete" />
             </RelativeLayout>
         </LinearLayout>
     </FrameLayout>
@@ -63,7 +63,7 @@
                     android:paddingLeft="@dimen/dp2"
                     android:paddingStart="@dimen/dp2"
                     android:paddingTop="@dimen/dp2"
-                    android:src="@drawable/result_blue_line"
+                    app:srcCompat="@drawable/result_blue_line"
                     tools:ignore="ContentDescription,RtlSymmetry" />
 
                 <com.rescribe.doctor.ui.customesViews.CustomTextView
