--- a/app/src/main/res/layout/map_dialog_ok.xml
+++ b/app/src/main/res/layout/map_dialog_ok.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,7 +19,7 @@
             android:layout_marginEnd="@dimen/dp2"
             android:layout_marginTop="@dimen/dp2"
             android:scaleType="centerCrop"
-            android:src="@drawable/staticmap" />
+            app:srcCompat="@drawable/staticmap" />
 
         <LinearLayout
             android:layout_width="match_parent"
