--- a/app/src/main/res/layout/mydialog.xml
+++ b/app/src/main/res/layout/mydialog.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,7 +14,7 @@
             android:layout_width="38dp"
             android:layout_height="38dp"
             android:layout_centerInParent="true"
-            android:src="@drawable/ic_launcher" />
+            app:srcCompat="@drawable/ic_launcher" />
 
         <ProgressBar
             android:id="@+id/customProgressBar"
