--- a/app/src/main/res/layout/trial_layout.xml
+++ b/app/src/main/res/layout/trial_layout.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="@dimen/dp6"
     android:orientation="vertical">
 
@@ -16,6 +17,6 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:src="@drawable/delete" />
+            app:srcCompat="@drawable/delete" />
     </RelativeLayout>
 </LinearLayout>
