--- a/app/src/main/res/layouts/add_records/layout/select_file_dialog.xml
+++ b/app/src/main/res/layouts/add_records/layout/select_file_dialog.xml
@@ -22,7 +22,7 @@
             android:layout_height="@dimen/dp50"
             android:layout_centerVertical="true"
             android:padding="@dimen/dp2"
-            android:src="@drawable/picture" />
+            app:srcCompat="@drawable/picture" />
 
         <com.rescribe.doctor.ui.customesViews.CustomTextView
             android:layout_width="match_parent"
@@ -52,7 +52,7 @@
             android:layout_height="@dimen/dp50"
             android:layout_centerVertical="true"
             android:padding="@dimen/dp2"
-            android:src="@drawable/folder" />
+            app:srcCompat="@drawable/folder" />
 
         <com.rescribe.doctor.ui.customesViews.CustomTextView
             android:layout_width="match_parent"
