--- a/app/src/main/res/layouts/dashboard/layout/home_page_layout.xml
+++ b/app/src/main/res/layouts/dashboard/layout/home_page_layout.xml
@@ -69,7 +69,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/dp21"
                 android:layout_marginTop="@dimen/dp21"
-                android:src="@drawable/vertical_line"
+                app:srcCompat="@drawable/vertical_line"
                 tools:ignore="ContentDescription" />
 
             <RelativeLayout
@@ -115,7 +115,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/dp21"
                 android:layout_marginTop="@dimen/dp21"
-                android:src="@drawable/vertical_line"
+                app:srcCompat="@drawable/vertical_line"
                 tools:ignore="ContentDescription" />
 
             <RelativeLayout
@@ -177,7 +177,7 @@
                 app:border_width="@dimen/dp1"
                 app:border_color="@color/white"
                 android:id="@+id/doctorDashboardImage"
-                android:src="@drawable/filtergrayfemaleicon" />
+                app:srcCompat="@drawable/filtergrayfemaleicon" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
