--- a/app/src/main/res/layouts/dashboard/layout/support_layout.xml
+++ b/app/src/main/res/layouts/dashboard/layout/support_layout.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:paddingTop="@dimen/dp10"
-            android:src="@drawable/support_bg" />
+            app:srcCompat="@drawable/support_bg" />
 
         <com.rescribe.doctor.ui.customesViews.CustomTextView
             android:layout_width="wrap_content"
@@ -83,7 +83,7 @@
                 android:layout_width="wrap_content"
                 android:textColor="@color/logo_color"
                 android:layout_height="wrap_content"
-                android:src="@drawable/scrog_product"
+                app:srcCompat="@drawable/scrog_product"
                 app:customFont="@string/roboto_regular"
                 android:text="Doctor Rescribe is a unique product of" />
 
@@ -97,7 +97,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_below="@id/rescribeTagLine"
                 android:layout_gravity="center"
-                android:src="@drawable/scrog_product"
+                app:srcCompat="@drawable/scrog_product"
                 android:text="SCORG TECHNOLOGIES Pvt.Ltd." />
         </LinearLayout>
     </RelativeLayout>
