--- a/app/src/main/res/layouts/global_ui_for_connect/layout/connect_chats_search_row_item.xml
+++ b/app/src/main/res/layouts/global_ui_for_connect/layout/connect_chats_search_row_item.xml
@@ -29,7 +29,7 @@
             android:layout_width="@dimen/dp40"
             android:layout_height="@dimen/dp40"
             android:layout_margin="@dimen/dp14"
-            android:src="@drawable/layer_12" />
+            app:srcCompat="@drawable/layer_12" />
 
         <RelativeLayout
             android:id="@+id/nameTimeLayout"
