--- a/app/src/main/res/layouts/patient/patient_appointment/layout/dialog_select_location_waiting_list_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/dialog_select_location_waiting_list_layout.xml
@@ -47,7 +47,7 @@
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/circular_shape_vital_bg"
                 android:padding="@dimen/dp20"
-                android:src="@drawable/location_icon" />
+                app:srcCompat="@drawable/location_icon" />
 
         </FrameLayout>
 
