--- a/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
@@ -87,7 +87,7 @@
                 android:layout_toRightOf="@id/clinicPatientCount"
                 android:paddingLeft="@dimen/dp3"
                 android:paddingStart="@dimen/dp3"
-                android:src="@drawable/appointment_count_arrow"
+                app:srcCompat="@drawable/appointment_count_arrow"
                 tools:ignore="ContentDescription,ObsoleteLayoutParam"
                 android:visibility="gone"
                 tools:visibility="visible"/>
@@ -103,7 +103,7 @@
                 android:paddingLeft="@dimen/dp3"
                 android:paddingStart="@dimen/dp3"
                 android:scaleY="-1"
-                android:src="@drawable/appointment_count_arrow"
+                app:srcCompat="@drawable/appointment_count_arrow"
                 android:visibility="gone"
                 tools:visibility="visible"
                 tools:ignore="ContentDescription,ObsoleteLayoutParam" />
@@ -202,7 +202,7 @@
                         android:paddingLeft="@dimen/dp2"
                         android:paddingStart="@dimen/dp2"
                         android:paddingTop="@dimen/dp2"
-                        android:src="@drawable/result_blue_line"
+                        app:srcCompat="@drawable/result_blue_line"
                         tools:ignore="ContentDescription,RtlSymmetry" />
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
@@ -246,7 +246,7 @@
                         android:layout_marginRight="13dp"
                         android:layout_toLeftOf="@+id/appointmentTime"
                         android:layout_toStartOf="@+id/appointmentTime"
-                        android:src="@drawable/waiting"
+                        app:srcCompat="@drawable/waiting"
                         android:visibility="gone"
                         tools:ignore="ContentDescription"
                         tools:visibility="visible" />
@@ -259,7 +259,7 @@
                         android:layout_alignParentRight="true"
                         android:layout_marginEnd="@dimen/dp16"
                         android:layout_marginRight="@dimen/dp16"
-                        android:src="@drawable/chat_icon"
+                        app:srcCompat="@drawable/chat_icon"
                         android:visibility="gone"
                         tools:ignore="ContentDescription"
                         tools:visibility="visible" />
