--- a/app/src/main/res/layouts/patient/patient_connect/layout/activity_patient_connect.xml
+++ b/app/src/main/res/layouts/patient/patient_connect/layout/activity_patient_connect.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/dp10"
-                android:src="@drawable/ic_arrow_back_white_24dp"
+                app:srcCompat="@drawable/ic_arrow_back_white_24dp"
                 android:visibility="gone"
                 tools:ignore="VectorDrawableCompat" />
 
