--- a/app/src/main/res/layouts/waiting_list/layout/waiting_base_layout.xml
+++ b/app/src/main/res/layouts/waiting_list/layout/waiting_base_layout.xml
@@ -12,7 +12,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="0.5dp"
             android:background="@color/toolbar_divider_color" />
 
         <android.support.design.widget.TabLayout
@@ -39,7 +39,7 @@
         android:layout_marginBottom="@dimen/fab_margin"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginTop="@dimen/dp5"
-        android:src="@drawable/ic_add_action"
+        app:srcCompat="@drawable/ic_add_action"
         android:visibility="visible"
         app:backgroundTint="@color/floating_blue_color"
         android:layout_marginRight="@dimen/fab_margin" />
