--- a/slideview/src/main/res/layout/sv_slide_view.xml
+++ b/slideview/src/main/res/layout/sv_slide_view.xml
@@ -22,7 +22,7 @@
         android:background="@null"
         android:splitTrack="false"/>
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/slideText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
